nginx-to-traefik-migration/manifests/whoami.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          args:
            - "--verbose"
          ports:
            - containerPort: 80
        - name: whoami-https
          image: traefik/whoami
          args:
            - "--verbose"
            - "--port=443"
            - "--cert=/etc/tls/tls.crt"
            - "--key=/etc/tls/tls.key"
          volumeMounts:
            - name: tls
              mountPath: /etc/tls
              readOnly: true
          ports:
            - containerPort: 443
      volumes:
        - name: tls
          secret:
            secretName: whoami-tls

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
