nginx-to-traefik-migration/manifests/chashsubset.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginxhello
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginxhello
  template:
    metadata:
      labels:
        app: nginxhello
    spec:
      containers:
        - name: nginxhello
          image: registry.k8s.io/e2e-test-images/echoserver:2.3
          ports:
            - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: nginxhello
  labels:
    app: nginxhello
spec:
  selector:
    app: nginxhello
  ports:
    - name: http
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "$http_x_hash-text-value"
    # nginx.ingress.kubernetes.io/upstream-hash-by-subset: "true"
    # nginx.ingress.kubernetes.io/upstream-hash-by-subset-size: "5"
  name: nginxhello-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: foo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginxhello
                port:
                  number: 80
