nginx-to-traefik-migration/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  name: whoami
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - domain.com
      secretName: tls-secret
  rules:
    - host: "*.foo.whoami.localhost"
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
