nginx-to-traefik-migration/manifests/ingress_auth_signin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://$host-auth/authenticate"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host-test/some-value"
  name: whoami
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "whoami.localhost"
      http:
        paths:
          - backend:
              service:
                name: production
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
