nginx-to-traefik-migration/manifests/ingress_forward_auth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-server.default.svc.cluster.local"
    nginx.ingress.kubernetes.io/auth-snippet: |
      if ($request_method = GET) {
        return 401;
      }
      proxy_method $request_method;
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Debug,X-Request-Method
  name: whoami
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "forwardauth.localhost"
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
