nginx-to-traefik-migration/manifests/production.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production
  annotations:
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #   nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /health
    # nginx.ingress.kubernetes.io/server-alias: "alias.localhost"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  # defaultBackend:
  #   service:
  #     name: production2
  #     port:
  #       number: 80
  rules:
    - host: production.localhost
      http:
        paths:
          - path: /1
            pathType: Prefix
            backend:
              service:
                name: production
                port:
                  name: http
          # - path: /2
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: production2
          #       port:
          #         number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alias
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "alias.localhost"
spec:
  ingressClassName: nginx
  rules:
    - host: prod2.localhost
      http:
        paths:
          - path: /1
            pathType: Prefix
            backend:
              service:
                name: production2
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          args:
            - "--verbose"
            # - "--cert=/etc/tls/tls.crt"
            # - "--key=/etc/tls/tls.key"
            - "--port=80"
          volumeMounts:
            - name: tls
              mountPath: /etc/tls
              readOnly: true
          ports:
            - containerPort: 80
            - containerPort: 443
      volumes:
        - name: tls
          secret:
            secretName: tls-secret

---
apiVersion: v1
kind: Service
metadata:
  name: production
spec:
  selector:
    app: production
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      name: https
      targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: production2
  template:
    metadata:
      labels:
        app: production2
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          args:
            - "--verbose"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: production2
spec:
  selector:
    app: production2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
